css/create.css
#create1 {
    margin-top: 80px;
}

.create-background {
    background-color:#f8f8f8;
    height:100%;
    min-height:100vh;
    width:100%;
}

.breadcrumb {
    background-color:#f5f5f5 !important;
    border:1.5px solid;
    border-color:#d0d0d0;
}

#dates, .question {
    float:left;
    width: 100%;
    margin-bottom: 30px;
}

.datepicker {
    width: 45% !important;
    margin-right: 5px;
    float: left;
}

#mileage-dropdown {
    margin-bottom:15px;
}

#trainingdays {
    clear: both;
}

.ui-selected, .highlight {
    background-color: #0066dd !important;
    color: white;
}

.navigate .btn {
    color: white;
    background-color:#0066dd;
    width:100px;
    height:40px;
    float: left;
}

#programs ul {
    padding: 0px;
    list-style-position: inside;
}

.pointer {
    cursor: pointer;
}

#activities {
    width: 300px;
    float: left;
    margin-right: 15px;
    margin-left:15px;
    height:350px;
}

#trainingstyle {
    width:520px;
    float:left;
    margin-left:0px;
    height:350px;
}

#schedulepanel {
    clear:both;
    width:835px;
    margin-left:15px;
}

.dailyrun {
    width: 50px;
    margin-right: 5px;
}

.graph {
    float: left;
    margin-right: 15px;
}

#create-finished {
    margin:80px auto;
    width:60vw;
    height:300px;
}

#create-finished .panel-body {
    margin:auto;
    text-align:center;
}

#create-finished .panel-body {
}
.create-page-70 {
    width: 900px;
}

.create-page-45 {
    width: 45% !important;
}

.create-page-50 {
    width: 50% !important;
}

#programs > thead > tr > th, #programs > tbody > tr > th, #programs > tfoot > tr > th, 
#programs > thead > tr > td, #programs > tbody > tr > td, #programs > tfoot > tr > td {
    padding-right: 40px !important;
    padding-left: 40px !important;
}

.input-date {
    width: 255px !important;
    /*margin-right: 50px !important;*/
}

#trainingdays button {
    width: 10%;
    text-align: center;
    border-radius: 8px;
    margin-right: 4%;
    margin-bottom: 30px;
    outline: none;
    padding-left:0px;
    padding-right:0px;
}

#no-continue {
    margin-top: 30px;
    display: none;
}

.active {
    color: black !important;
}

.inactive {
    color: grey;
}

